<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2E2E"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <TextView
        android:id="@+id/tv_delete_app_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="delete app data.."
        android:textAllCaps="true"
        android:textColor="@color/main_green"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="21dp" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/main_green"
        app:layout_constraintTop_toBottomOf="@+id/tv_delete_app_data"
        tools:layout_editor_absoluteX="21dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_delete_app_data">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_save_recent_and_messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="21dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="13dp"
                android:text="@string/save_recent_numbers_messages_n_disabling_it_will_clear_saved_ones"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sc_save_recent_and_messages"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/sc_save_recent_and_messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:thumb="@drawable/custom_thumb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@null"
                app:track="@drawable/custom_track"
                app:trackTint="@null" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_merge_prefix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="13dp"
                android:text="@string/merge_prfix_and_number_inputs"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sc_merge_prefix"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/sc_merge_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:thumb="@drawable/custom_thumb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@null"
                app:track="@drawable/custom_track"
                app:trackTint="@null" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_remove_leading_zeros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="13dp"
                android:text="@string/removes_leading_zeros_from_the_prefix_and_number"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sc_remove_leading_zeros"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/sc_remove_leading_zeros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:thumb="@drawable/custom_thumb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@null"
                app:track="@drawable/custom_track"
                app:trackTint="@null" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_hide_the_help_text_from_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="13dp"
                android:text="@string/hide_the_help_text_from_the_main_screen"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sc_hide_the_help_text_from_main"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/sc_hide_the_help_text_from_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:thumb="@drawable/custom_thumb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@null"
                app:track="@drawable/custom_track"
                app:trackTint="@null" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_restore_prefix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

            <TextView
                android:id="@+id/restore_prefix_none_when_the_app_closes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="13dp"
                android:text="@string/restore_prefix_none_when_the_app_closes"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sc_restore_prefix"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/sc_restore_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:thumb="@drawable/custom_thumb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@null"
                app:track="@drawable/custom_track"
                app:trackTint="@null" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_open_automatically_when_app_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="13dp"
                android:text="@string/open_automatically_when_a_number_is_autofilled_share_call_recent_or_clipboard"
                android:textColor="@color/white"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sc_open_automatically_when_app_close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/sc_open_automatically_when_app_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:thumb="@drawable/custom_thumb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="@null"
                app:track="@drawable/custom_track"
                app:trackTint="@null" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>